--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# User Directories
+private/
+private/github-ket.txt
+venv-pnginfo/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -126,7 +131,6 @@ celerybeat.pid
 .venv
 env/
 venv/
-venv-pnginfo/
 ENV/
 env.bak/
 venv.bak/
